crates/plotnik-tests/tests/04-emit/types/captures/unrelated_capture_and_capture_type_errors_both_report.txt
Bad = [
  (identifier) @x
  {
    (identifier) @id
  } @x
]

Flag = (identifier) @flag :: bool
------------------ DIAGNOSTICS -------------------
error: `@x` has incompatible types `Node` and `{ id: Node }` across alternatives
 --> query.ptk:2:16
  |
2 |   (identifier) @x
  |                ^^
...
5 |   } @x
  |     -- `@x` has type `{ id: Node }` here
  |
help: make every alternative produce the same type, or label the alternatives for a variant type

error: capture type `bool` requires a value that may be absent. This capture is always present
 --> query.ptk:8:27
  |
8 | Flag = (identifier) @flag :: bool
  |                           ^^^^^^^
